--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<swagger.version>2.2.2</swagger.version>
 		<mybatis.boot.version>1.3.1</mybatis.boot.version>
-		<druid.version>1.1.0</druid.version>
+		<druid.starter.version>1.1.10</druid.starter.version>
 		<pagehelper.version>1.1.2</pagehelper.version>
 		<mapper.version>3.4.2</mapper.version>
 		<commons.lang3.version>3.6</commons.lang3.version>
@@ -94,8 +94,8 @@
 
 		<dependency>
 			<groupId>com.alibaba</groupId>
-			<artifactId>druid</artifactId>
-			<version>${druid.version}</version>
+			<artifactId>druid-spring-boot-starter</artifactId>
+			<version>${druid.starter.version}</version>
 		</dependency>
 
 		<dependency>
