--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
     url: jdbc:mysql://192.168.0.114:3306/main_smmsdemo
     username: root
     password: root
-    driverClassName: com.mysql.jdbc.Driver
+    driver-class-name: com.mysql.jdbc.Driver
     # 使用druid数据源
     #type: com.alibaba.druid.pool.DruidDataSource
     filters: stat
